<resources>
    <string name="app_name">Client</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Ingreso</string>
    <string name="validate_fragment_label">Validación</string>

    <string name="profilecustomer_fragment_label">Perfil</string>
    <string name="home_fragment_label">Inicio</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_oauth">OAuthActivity</string>

    <!-- LOGIN STRING -->
    <string name="status_allowed">allowed</string>
    <string name="status_denied">denied</string>
    <string name="status_ob_no">no</string>
    <string name="status_ob_yes">yes</string>

    <!-- DIALOG ONE STYLE -->
    <string name="title_login_dialog">¡Al parecer aún no has iniciado sesión!</string>
    <string name="message_login_dialog">Ingresa para acceder a distint1as funciones exclusivas que tenemos para usted</string>
    <string name="positive_button_login_dialog">Iniciar sesión</string>
    <string name="negative_button_login_dialog">Más tarde</string>

    <!-- DIALOG WAIT -->
    <string name="title_wait_dialog">Espere</string>
    <string name="message_wait_dialog">Un momento...</string>
    <string name="message_validate_dialog">Validando...</string>
    <string name="message_register_dialog">Registrando...</string>

    <!-- USER SIGN UP -->
    <string name="firstnames">Nombres</string>
    <string name="lastnames">Apellidos</string>
    <string name="choosePhotoProfile">Elegir Foto</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Número de celular</string>

    <string name="characters">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZzÁáÂâÃãÀàÇçÉéÊêÍíÓóÔôÕõÚú</string>

</resources>